--- a/frontend/menu_display.html
+++ b/frontend/menu_display.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="menuTitle">Menu Page</title>
+    <!-- Font Awesome for social media icons and view toggles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Custom CSS (compiled from style.css by Tailwind) -->
     <link rel="stylesheet" href="./css/dist.css"> 
+    <!-- Google Fonts for Kantumruy Pro (Khmer) and Inter (English) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -210,38 +213,50 @@
 </head>
 <body class="bg-gray-100 leading-normal tracking-normal flex flex-col min-h-screen">
 
-    <header class="bg-white shadow-md py-4 sticky top-0 z-20">
-        <div class="container mx-auto px-4 flex items-center justify-between">
-            <div id="storeHeaderInfo" class="flex items-center space-x-3 cursor-pointer">
-                <img id="storeLogo" src="" alt="Store Logo" class="h-12 w-12 object-contain rounded-full border border-orange-500 p-1 bg-white" style="display: none;">
-                <h1 id="storeName" class="text-xl sm:text-2xl font-bold text-gray-800"></h1>
+    <!-- Sticky Navbar Wrapper -->
+    <div class="sticky top-0 z-20">
+        <!-- Header for Store Info -->
+        <header class="bg-white shadow-md py-4">
+            <div class="container mx-auto px-4 flex items-center justify-between">
+                <div id="storeHeaderInfo" class="flex items-center space-x-3 cursor-pointer">
+                    <img id="storeLogo" src="" alt="Store Logo" class="h-12 w-12 object-contain rounded-full border border-orange-500 p-1 bg-white" style="display: none;">
+                    <h1 id="storeName" class="text-xl sm:text-2xl font-bold text-gray-800"></h1>
+                </div>
+                <!-- View Toggle Icons -->
+                <div class="flex items-center space-x-3">
+                    <button id="gridViewBtn" class="text-orange-600 hover:text-orange-800 focus:outline-none">
+                        <i class="fas fa-th-large text-xl"></i> <!-- Grid icon -->
+                    </button>
+                    <button id="listViewBtn" class="text-gray-400 hover:text-orange-600 focus:outline-none">
+                        <i class="fas fa-list text-xl"></i> <!-- List icon -->
+                    </button>
+                </div>
             </div>
-            <div class="flex items-center space-x-3">
-                <button id="gridViewBtn" class="text-orange-600 hover:text-orange-800 focus:outline-none">
-                    <i class="fas fa-th-large text-xl"></i> </button>
-                <button id="listViewBtn" class="text-gray-400 hover:text-orange-600 focus:outline-none">
-                    <i class="fas fa-list text-xl"></i> </button>
+        </header>
+
+        <!-- Search Bar -->
+        <div class="bg-white py-3 px-4 shadow-sm border-b border-gray-200">
+            <div class="container mx-auto">
+                <div class="relative">
+                    <input type="text" id="searchMenuInput" placeholder="Search menus..." class="w-full pl-10 pr-4 py-2 rounded-lg border border-orange-400 focus:outline-none focus:ring-2 focus:ring-orange-500 text-gray-700">
+                    <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-orange-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                </div>
             </div>
         </div>
-    </header>
 
-    <div class="bg-white py-3 px-4 shadow-sm border-b border-gray-200">
-        <div class="container mx-auto">
-            <div class="relative">
-                <input type="text" id="searchMenuInput" placeholder="Search menus..." class="w-full pl-10 pr-4 py-2 rounded-lg border border-orange-400 focus:outline-none focus:ring-2 focus:ring-orange-500 text-gray-700">
-                <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-orange-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-            </div>
-        </div>
-    </div>
-
-    <nav class="bg-white shadow-sm sticky top-[120px] z-30 border-b border-gray-200"> <div class="container mx-auto px-4 overflow-x-auto whitespace-nowrap scrollbar-hide">
-            <ul id="categoryTabs" class="flex space-x-4 py-2">
+        <!-- Category Tabs -->
+        <nav class="bg-white shadow-sm border-b border-gray-200">
+            <div class="container mx-auto px-4 overflow-x-auto whitespace-nowrap scrollbar-hide">
+                <ul id="categoryTabs" class="flex space-x-4 py-2">
+                    <!-- Category tabs will be loaded here by JavaScript -->
                 </ul>
-        </div>
-    </nav>
+            </div>
+        </nav>
+    </div> <!-- End of Sticky Navbar Wrapper -->
 
     <main class="container mx-auto px-4 py-6 flex-grow">
         <div id="menuContent">
+            <!-- Menu items will be loaded here by JavaScript, grouped by category -->
             <p id="loadingMessage" class="text-center text-gray-500 text-lg mt-12">Loading menu...</p>
             <p id="noMenuMessage" class="text-center text-gray-500 text-lg mt-12 hidden">No menu items found for this store.</p>
             <p id="noSearchResultsMessage" class="text-center text-gray-500 text-lg mt-12 hidden">No matching items found.</p>
@@ -254,6 +269,7 @@
         </div>
     </footer>
 
+    <!-- Image Popup Modal Structure -->
     <div id="imagePopupModal" class="fixed inset-0 bg-black bg-opacity-70 hidden flex items-center justify-center p-4 z-50">
         <div class="bg-white rounded-lg shadow-xl w-full max-w-md md:max-w-lg lg:max-w-xl max-h-[90vh] overflow-y-auto relative p-4 flex flex-col items-center">
             <button id="closeImagePopupBtn" class="absolute top-3 right-3 text-white bg-gray-800 rounded-full p-2 hover:bg-gray-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-white z-10">
@@ -263,10 +279,12 @@
             <div class="text-left w-full px-4 product-info-container">
                 <h3 id="popupProductName" class="text-xl font-bold text-gray-800 mb-2"></h3>
                 <p id="popupProductDescription" class="text-sm text-gray-600 mb-2"></p>
-                <p id="popupProductPrice" class="text-lg font-bold text-orange-600"></p> </div>
+                <p id="popupProductPrice" class="text-lg font-bold text-orange-600"></p> <!-- Price element with orange color -->
+            </div>
         </div>
     </div>
 
+    <!-- Store Info Popup Modal Structure -->
     <div id="storeInfoModal" class="fixed inset-0 bg-black bg-opacity-70 hidden flex items-center justify-center p-4 z-50">
         <div class="bg-white p-6 rounded-lg shadow-xl w-full max-w-md max-h-[90vh] overflow-y-auto relative text-center">
             <button id="closeStoreInfoBtn" class="absolute top-3 right-3 text-white bg-gray-800 rounded-full p-2 hover:bg-gray-700 transition duration-200 focus:outline-none focus:ring-2 focus:ring-white z-10">
@@ -289,6 +307,7 @@
                 </div>
 
                 <div class="flex justify-center space-x-6 text-2xl text-gray-700">
+                    <!-- Social media links - these would be populated by JS if data is available -->
                     <a href="#" target="_blank" class="hover:text-orange-600 transition duration-200 hidden" id="socialFacebook"><i class="fab fa-facebook"></i></a>
                     <a href="#" target="_blank" class="hover:text-orange-600 transition duration-200 hidden" id="socialTelegram"><i class="fab fa-telegram"></i></a>
                     <a href="#" target="_blank" class="hover:text-orange-600 transition duration-200 hidden" id="socialTikTok"><i class="fab fa-tiktok"></i></a>
