--- a/frontend/superadmin.html
+++ b/frontend/superadmin.html
@@ -6,6 +6,7 @@
     <title>Superadmin Dashboard - QR Digital Menu</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
     <!-- Custom styles including font imports -->
     <link rel="stylesheet" href="./css/dist.css">
 </head>
