--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Battambang:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -570,11 +571,20 @@
                         <label for="productPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
                         <input type="text" id="productPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
                     </div>
+                    <!-- NEW: Product Image URL Input for Add Product Form -->
+                    <div>
+                        <label for="productImageUrl" class="block text-gray-700 text-base font-semibold mb-2">Product Image URL (Optional):</label>
+                        <input type="url" id="productImageUrl" name="imageUrl" placeholder="https://example.com/image.jpg"
+                            class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                        <p class="text-xs text-gray-500 mt-1">Paste a direct image URL here. This takes precedence over file upload.</p>
+                    </div>
+                    <!-- Existing Product Image File Upload -->
                     <div>
                         <label for="productImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (PNG, JPG):</label>
                         <input type="file" id="productImage" name="image" accept="image/*"
                             class="block w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer">
                         <img id="newProductImagePreview" class="mt-4 max-h-48 object-contain rounded-lg shadow-md border border-gray-200 p-2 hidden" src="" alt="New Product Image Preview">
+                        <p class="text-xs text-gray-500 mt-1">Upload an image file. URL input above takes precedence.</p>
                     </div>
                     <div class="md:col-span-2 flex justify-start">
                         <button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-lg focus:outline-none focus:shadow-outline w-full sm:w-auto transition duration-300 transform hover:scale-105 shadow-md hover:shadow-lg">
@@ -641,11 +651,25 @@
                             <label for="editProductPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
                             <input type="text" id="editProductPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
                         </div>
+                        <!-- NEW: Product Image URL Input for Edit Product Form -->
+                        <div>
+                            <label for="editProductImageUrl" class="block text-gray-700 text-base font-semibold mb-2">Product Image URL (Optional):</label>
+                            <input type="url" id="editProductImageUrl" name="imageUrl" placeholder="https://example.com/image.jpg"
+                                class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                            <p class="text-xs text-gray-500 mt-1">Paste a direct image URL here. This takes precedence over file upload.</p>
+                        </div>
+                        <!-- Existing Product Image File Upload for Edit Product Form -->
                         <div>
                             <label for="editProductImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (select to change):</label>
                             <input type="file" id="editProductImage" name="image" accept="image/*"
                                 class="block w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer">
                             <img id="currentProductImage" class="mt-6 max-h-48 object-contain rounded-lg shadow-md border border-gray-200 p-2" src="" alt="Current Product Image" style="display: none;">
+                            <p class="text-xs text-gray-500 mt-1">Upload an image file. URL input above takes precedence.</p>
+                        </div>
+                        <!-- NEW: Checkbox to remove current image (both URL and uploaded) -->
+                        <div id="removeProductImageContainer" class="mt-2" style="display: none;">
+                            <input type="checkbox" id="removeProductImage" class="mr-2 h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+                            <label for="removeProductImage" class="text-base text-gray-700">Remove current image</label>
                         </div>
                         <div class="flex flex-col sm:flex-row justify-end space-y-4 sm:space-y-0 sm:space-x-4 mt-8">
                             <button type="button" id="cancelEditProductBtn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline transition duration-300 transform hover:scale-105 shadow-md hover:shadow-lg">
