--- a/frontend/menu_display.html
+++ b/frontend/menu_display.html
@@ -11,6 +11,7 @@
     <!-- Google Fonts for Kantumruy Pro (Khmer) and Inter (English) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
