--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -650,6 +650,13 @@
                         <div>
                             <label for="editProductPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
                             <input type="text" id="editProductPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+        <div>
+          <label for="editProductAvailabilityCheckbox" class="block text-gray-700 text-base font-semibold mb-2">
+            Available:
+          </label>
+          <input type="checkbox" id="editProductAvailabilityCheckbox" name="available"
+                 class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+        </div>
                         </div>
                         <!-- NEW: Product Image URL Input for Edit Product Form -->
                         <div>
