--- a/frontend/index.html
+++ b/frontend/index.html
@@ -246,9 +246,7 @@
                         <!-- This is a placeholder. You would typically get an iframe embed code from Google Maps. -->
                         <!-- Example: Go to Google Maps, search "Yeung Shi Group", click Share -> Embed a map, copy iframe src -->
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.020586906263!2d104.9080766749363!3d11.554035688629091!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095133614051a3%3A0x6d36e7681f9a1b6a!2sYeung%20Shi%20Group%20(YSG)!5e0!3m2!1sen!2skh!4v1700000000000!5m2!1sen!2skh" 
-                            width="100%" 
-                            height="450" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4418.8774338907315!2d104.9118852179681!3d11.534321742389025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310950e6f508d97f%3A0x3fe425c8d8a84794!2sYeung%20Shi%20Group%20(YSG)!5e1!3m2!1sen!2skh!4v1755503497818!5m2!1sen!2skh" 
                             style="border:0;" 
                             allowfullscreen="" 
                             loading="lazy" 
