--- a/frontend/menu_display.html
+++ b/frontend/menu_display.html
@@ -300,7 +300,11 @@
         <div class="bg-white py-3 px-4 shadow-sm border-b border-gray-200">
             <div class="container mx-auto">
                 <div class="relative">
-                    <input type="text" id="searchMenuInput" placeholder="Search menus..." class="w-full pl-10 pr-4 py-2 rounded-lg border border-orange-400 focus:outline-none focus:ring-2 focus:ring-orange-500 text-gray-700">
+                    <input type="text" id="searchMenuInput" placeholder="Search menus..." class="w-full pl-10 pr-10 py-2 rounded-lg border border-orange-400 focus:outline-none focus:ring-2 focus:ring-orange-500 text-gray-700">
+                    <!-- Clear Button -->
+                    <button id="clearSearchBtn" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-orange-500 hidden">
+                        <i class="fas fa-times"></i>
+                    </button>
                     <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-orange-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
                 </div>
             </div>
