--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,14 +6,14 @@
     <title>QR Digital Menu - Welcome</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
-   <link rel="stylesheet" href="./css/dist.css">
+   <link rel="stylesheet" href="/css/dist.css">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-md text-center max-w-md w-full">
         <h1 class="text-3xl font-bold text-gray-800 mb-4">Welcome to QR Digital Menu</h1>
         <p class="text-gray-600 mb-6">Effortlessly manage your restaurant's menu with QR codes.</p>
         <div class="space-y-4">
-            <a href="login.html" class="block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline transition duration-300">
+            <a href="/login" class="block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline transition duration-300">
                 Login as Admin / Superadmin
             </a>
             <p class="text-sm text-gray-500">Scan a QR code to view a menu directly!</p>
