--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
                     <li><a href="#about-us" class="text-gray-700 hover:text-orange-600 font-semibold transition duration-300">About Us</a></li>
                     <li><a href="#our-products" class="text-gray-700 hover:text-orange-600 font-semibold transition duration-300">Products</a></li>
                     <li><a href="#contact-us" class="text-gray-700 hover:text-orange-600 font-semibold transition duration-300">Contact</a></li>
-                    <li><a href="/login.html" class="bg-orange-600 text-white px-4 py-2 rounded-full hover:bg-orange-700 transition duration-300 shadow-md">Login</a></li>
+                    <li><a href="/login" class="bg-orange-600 text-white px-4 py-2 rounded-full hover:bg-orange-700 transition duration-300 shadow-md">Login</a></li>
                     <!-- Removed Register Button -->
                 </ul>
             </nav>
@@ -103,7 +103,7 @@
             <a href="#our-products" class="text-gray-700 hover:text-orange-600 font-semibold transition duration-300" data-close-menu>Products</a>
             <a href="#contact-us" class="text-gray-700 hover:text-orange-600 font-semibold transition duration-300" data-close-menu>Contact</a>
             <!-- Adjusted mobile button sizes -->
-            <a href="/login.html" class="bg-orange-600 text-white px-4 py-2 rounded-full hover:bg-orange-700 transition duration-300 shadow-md text-center text-lg w-full">Login</a>
+            <a href="//login" class="bg-orange-600 text-white px-4 py-2 rounded-full hover:bg-orange-700 transition duration-300 shadow-md text-center text-lg w-full">Login</a>
             <!-- Removed Register Button -->
         </nav>
     </div>
@@ -276,7 +276,7 @@
     </footer>
 
     <!-- Your JavaScript files -->
-    <script src="./js/api.js"></script>
+    <script src="/js/api.js"></script>
     <script>
         // JavaScript for Mobile Menu Toggle
         const hamburgerButton = document.getElementById('hamburger-menu-button');
