--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -716,10 +716,10 @@
         </div>
     </div>
 
-    <script src="./js/api.js"></script>
-    <script src="./js/auth.js"></script>
-    <script src="./js/admin.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/auth.js"></script>
+    <script src="/js/admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
-    <script src="./js/utils.js"></script>
+    <script src="/js/utils.js"></script>
 </body>
 </html>
