--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
     <!-- Custom styles including font imports -->
-  <link rel="stylesheet" href="./css/dist.css">
+  <link rel="stylesheet" href="/css/dist.css">
 </head>
 <body class="bg-gray-100 font-sans leading-normal tracking-normal flex items-center justify-center min-h-screen p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-sm w-full border border-gray-200">
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Corrected order: api.js BEFORE auth.js -->
-    <script src="./js/api.js"></script>
-    <script src="./js/auth.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/auth.js"></script>
 </body>
 </html>
