--- a/frontend/superadmin.html
+++ b/frontend/superadmin.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
     <!-- Custom styles including font imports -->
-    <link rel="stylesheet" href="./css/dist.css">
+    <link rel="stylesheet" href="/css/dist.css">
 </head>
 <body class="bg-gray-50 font-sans leading-normal tracking-normal flex flex-col lg:flex-row min-h-screen">
     <!-- Sidebar -->
@@ -111,8 +111,8 @@
 
     </main>
     <!-- Corrected order: api.js BEFORE auth.js and superadmin.js -->
-    <script src="./js/api.js"></script>
-    <script src="./js/auth.js"></script>
-    <script src="./js/superadmin.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/auth.js"></script>
+    <script src="/js/superadmin.js"></script>
 </body>
 </html>
