--- a/frontend/superadmin.html
+++ b/frontend/superadmin.html
@@ -108,6 +108,36 @@
                 </form>
             </div>
         </div>
+        <!-- Password Confirmation Modal -->
+<div id="passwordConfirmModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white rounded-xl shadow-xl p-6 w-full max-w-md">
+        <div class="flex justify-between items-center mb-4">
+            <h3 class="text-xl font-semibold text-gray-800">Confirm Deletion</h3>
+            <button onclick="closePasswordConfirmModal()" class="text-gray-400 hover:text-gray-500">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        
+        <div class="my-4">
+            <p id="passwordConfirmText" class="text-gray-600">
+                Please enter your superadmin password to delete:
+            </p>
+            <input type="password" id="confirmPasswordInput" 
+                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 mt-2" 
+                   placeholder="Enter your password">
+            <p id="passwordConfirmMessage" class="text-red-500 text-sm mt-1 hidden"></p>
+        </div>
+        
+        <div class="flex justify-end space-x-3">
+            <button id="cancelPasswordBtn" class="px-4 py-2 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-50">
+                Cancel
+            </button>
+            <button id="confirmPasswordBtn" class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">
+                Confirm Delete
+            </button>
+        </div>
+    </div>
+</div>
 
     </main>
     <!-- Corrected order: api.js BEFORE auth.js and superadmin.js -->
