--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,36 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - QR Digital Menu</title>
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
-    <!-- Custom styles including font imports -->
-  <link rel="stylesheet" href="/css/dist.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - QR Digital Menu</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Font Awesome -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
+  <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
+
+  <style>
+    body {
+      background-color: #ffffff;
+      font-family: 'Inter', sans-serif;
+    }
+    .login-card {
+      background: white;
+      border: 1px solid #e5e7eb;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
+    }
+    .input-field {
+      transition: all 0.25s ease;
+    }
+    .input-field:focus {
+      border-color: #3b82f6;
+      box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.15);
+    }
+    .btn-login {
+      transition: all 0.25s ease;
+    }
+    .btn-login:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(37, 99, 235, 0.25);
+    }
+    .telegram-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      color: #0e8edc;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    .telegram-link:hover {
+      color: #0369a1;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 font-sans leading-normal tracking-normal flex items-center justify-center min-h-screen p-4">
-    <div class="bg-white p-8 rounded-xl shadow-lg max-w-sm w-full border border-gray-200">
-        <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Login to Your Account</h2>
-        <form id="loginForm" class="space-y-5">
-            <div>
-                <label for="email" class="block text-gray-700 text-sm font-semibold mb-2">Email Address:</label>
-                <input type="email" id="email" name="email" required class="shadow-sm appearance-none border border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200" placeholder="your@example.com">
-            </div>
-            <div>
-                <label for="password" class="block text-gray-700 text-sm font-semibold mb-2">Password:</label>
-                <input type="password" id="password" name="password" required class="shadow-sm appearance-none border border-gray-300 rounded-lg w-full py-3 px-4 text-gray-700 mb-3 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200" placeholder="••••••••">
-            </div>
-            <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg focus:outline-none focus:shadow-outline w-full transition duration-300 transform hover:scale-105">
-                Sign In
-            </button>
-            <p id="loginMessage" class="text-center text-sm mt-4 hidden"></p>
-        </form>
+
+<body class="min-h-screen flex items-center justify-center p-4">
+  <div class="login-card rounded-2xl p-10 w-full max-w-md">
+    <div class="text-center mb-8">
+      <h2 class="text-3xl font-bold text-gray-900">Welcome Back</h2>
+      <p class="text-gray-500 mt-1">Sign in to access your QR Digital Menu</p>
     </div>
 
-    <!-- Corrected order: api.js BEFORE auth.js -->
-    <script src="/js/api.js"></script>
-    <script src="/js/auth.js"></script>
+    <form id="loginForm" class="space-y-6">
+      <!-- Email -->
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700 mb-2">Email Address</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          required
+          placeholder="your@example.com"
+          class="input-field w-full border border-gray-300 rounded-lg py-2.5 px-4 text-gray-900 placeholder-gray-400 focus:outline-none"
+        />
+      </div>
+
+      <!-- Password -->
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+        <div class="relative flex items-center">
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+            placeholder="••••••••"
+            class="input-field w-full border border-gray-300 rounded-lg py-2.5 px-4 pr-10 text-gray-900 placeholder-gray-400 focus:outline-none"
+          />
+          <!-- ✅ Eye icon perfectly centered -->
+          <button
+            type="button"
+            id="togglePassword"
+            class="absolute right-3 flex items-center justify-center text-gray-400 hover:text-gray-700"
+          >
+            <i class="fas fa-eye"></i>
+          </button>
+        </div>
+      </div>
+
+      <!-- Forgot Password / Telegram -->
+      <div class="text-center">
+        <a href="https://t.me/Emma_Heang" target="_blank" rel="noopener noreferrer" class="telegram-link text-sm">
+          <i class="fab fa-telegram-plane"></i> Forgot password? Contact me
+        </a>
+      </div>
+
+      <!-- Sign In Button -->
+      <button
+        type="submit"
+        class="btn-login bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+      >
+        Sign In
+      </button>
+
+      <p id="loginMessage" class="text-center text-sm mt-4 hidden"></p>
+
+      <p class="text-center text-gray-500 text-xs mt-4">
+        Need help? Contact <strong>@Emma_Heang</strong> on Telegram.
+      </p>
+    </form>
+  </div>
+
+  <!-- JS -->
+  <script src="/js/api.js"></script>
+  <script src="/js/auth.js"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const togglePassword = document.getElementById('togglePassword');
+      const password = document.getElementById('password');
+
+      togglePassword.addEventListener('click', () => {
+        const type = password.type === 'password' ? 'text' : 'password';
+        password.type = type;
+        togglePassword.innerHTML =
+          type === 'password'
+            ? '<i class="fas fa-eye"></i>'
+            : '<i class="fas fa-eye-slash"></i>';
+      });
+    });
+  </script>
 </body>
 </html>
