--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -396,14 +396,14 @@
         opacity: 0;
     }
     
-    .bottom-nav .nav-wrap {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: .5rem;
-        padding: .35rem .75rem .5rem;
-        max-width: 900px;
-        margin: 0 auto;
-    }
+        .bottom-nav .nav-wrap {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: .5rem;
+    padding: .10rem 0;
+    max-width: 900px;
+    margin: 0 auto;
+}
     .bottom-nav button {
         display: flex;
         flex-direction: column;
@@ -808,7 +808,7 @@
         <!-- Category Tabs -->
         <nav class="shadow-sm border-b border-gray-200">
             <div class="container mx-auto px-4 overflow-x-auto whitespace-nowrap scrollbar-hide tabs-scroll">
-                <ul id="categoryTabs" class="flex space-x-4 py-2">
+                <ul id="categoryTabs" class="flex space-x-4 py-1">
                     <!-- Category tabs will be loaded here by JavaScript -->
                 </ul>
             </div>
@@ -862,7 +862,7 @@
                 <a href="https://www.tiktok.com/@spare_part_center" class="social-icon-modal tiktok" title="Follow on TikTok">
                     <i class="fab fa-tiktok"></i>
                 </a>
-                <a href="ttps://t.me/sparepartcenter" class="social-icon-modal telegram" title="Message on Telegram">
+                <a href="https://t.me/sparepartcenter" class="social-icon-modal telegram" title="Message on Telegram">
                     <i class="fab fa-telegram"></i>
                 </a>
             </div>
