--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -680,6 +680,8 @@
                     </tbody>
                 </table>
             </div>
+            
+             <div id="paginationContainer" class="mt-6"></div>
 
             <div id="editProductModal" class="modal-overlay hidden">
                 <div class="modal-content">
