--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1663,15 +1663,15 @@ main { padding-bottom: 5.5rem; } /* space for bottom nav */
         <div class="nav-wrap">
             <button id="navHome" class="active">
                 <i class="fas fa-home text-lg"></i>
-                <span>Home</span>
+                <span>ទំព័រដើម</span>
             </button>
             <button id="navCategories">
                 <i class="fas fa-th-large text-lg"></i>
-                <span>Categories</span>
+                <span>កាតាឡុក</span>
             </button>
             <button id="navProfile">
                 <i class="fas fa-store text-lg"></i>
-                <span>Store</span>
+                <span>ហាង</span>
             </button>
         </div>
     </nav>
