update Last project

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1271,6 +1271,17 @@ main { padding-bottom: 5.5rem; } /* space for bottom nav */
     white-space: nowrap;
     margin-bottom: 0.25rem;
 }
+/* Professional system fonts - NO EXTRA FONT NEEDED */
+.store-name-english {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-weight: 700 !important;
+    letter-spacing: -0.015em;
+}
+
+.store-name-khmer {
+    font-family: 'Kantumruy Pro', sans-serif !important;
+    font-weight: 700 !important;
+}
 
 .telegram-dropdown-item-store:last-child {
     margin-bottom: 0;
@@ -1729,7 +1740,6 @@ main { padding-bottom: 5.5rem; } /* space for bottom nav */
                 console.log('❌ Nav toggle elements not found');
             }
         }
-        
         // Initialize on load
         setupNavToggle();
         
@@ -1742,4 +1752,5 @@ main { padding-bottom: 5.5rem; } /* space for bottom nav */
     </script>
 
 </body>
-</html>
+</html> 
+
